12/3.3/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
          name: frontend-http
        - containerPort: 443
          name: frontend-https
---
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: app
spec:
  selector:
    app: frontend
  ports:
  - name: front-svc-http
    protocol: TCP
    port: 80
    targetPort: frontend-http
  - name: front-svc-https
    protocol: TCP
    port: 443
    targetPort: frontend-https
